[project]
name = "reddiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kafka-python>=2.1.5",
    "matplotlib>=3.10.1",
    "praw>=7.8.1",
    "python-dotenv>=1.1.0",
    "streamlit>=1.44.1",
    "textblob>=0.19.0",
    "vadersentiment>=3.3.2",
]
